--- a/Project/Engine.vcxproj.filters
+++ b/Project/Engine.vcxproj.filters
@@ -111,6 +111,8 @@
     <ClCompile Include="Engine\CBuffer\ParticleBuffer.cpp" />
     <ClCompile Include="Engine\Renderer\ParticleRenderer.cpp" />
     <ClCompile Include="Game\Scenes\TitleScene.cpp" />
+    <ClCompile Include="Game\Editor\Base\BaseEditor.cpp" />
+    <ClCompile Include="Game\Editor\Manager\EditorManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\Utility\Environment.h" />
@@ -191,5 +193,7 @@
     <ClInclude Include="Lib\Adapter\Random.h" />
     <ClInclude Include="Engine\Renderer\ParticleRenderer.h" />
     <ClInclude Include="Game\Scenes\TitleScene.h" />
+    <ClInclude Include="Game\Editor\Base\BaseEditor.h" />
+    <ClInclude Include="Game\Editor\Manager\EditorManager.h" />
   </ItemGroup>
 </Project>
