--- a/Project/Engine.vcxproj.filters
+++ b/Project/Engine.vcxproj.filters
@@ -32,6 +32,7 @@
     <FxCompile Include="Resources\Shaders\StaticMesh.VS.hlsl" />
     <FxCompile Include="Resources\Shaders\StaticMesh.PS.hlsl" />
     <FxCompile Include="Resources\Engine\Shaders\ShadowDepth.VS.hlsl" />
+    <FxCompile Include="Resources\Engine\Shaders\NormalObject3D.PS.hlsl" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Shaders\Fullscreen.hlsli" />
