--- a/Project/Engine.vcxproj
+++ b/Project/Engine.vcxproj
@@ -346,7 +346,7 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Game\Camera\Camera2D.cpp" />
-    <ClCompile Include="Game\Object\Field.cpp" />
+    <ClCompile Include="Game\Objects\Environment\Field.cpp" />
     <ClCompile Include="Game\Editor\Manager\EditorManager.cpp" />
     <ClCompile Include="Game\Editor\Base\BaseEditor.cpp" />
     <ClCompile Include="Lib\Adapter\Easing.cpp" />
@@ -414,17 +414,19 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClCompile Include="Game\3D\PrimitiveDrawer.cpp" />
     <ClCompile Include="Engine\CBuffer\MaterialBuffer.cpp" />
     <ClCompile Include="Game\3D\Model\Model.cpp" />
-    <ClCompile Include="Game\Object\Test.cpp" />
     <ClCompile Include="Engine\CBuffer\ParticleBuffer.cpp" />
     <ClCompile Include="Engine\Renderer\ParticleRenderer.cpp" />
     <ClCompile Include="Game\Scenes\TitleScene.cpp" />
     <ClCompile Include="Engine\Renderer\ShadowMapRenderer.cpp" />
     <ClCompile Include="Game\Camera\SunLightCamera.cpp" />
     <ClCompile Include="Game\2D\Sprite.cpp" />
+    <ClCompile Include="Game\Objects\Player\Player.cpp" />
+    <ClCompile Include="Game\Objects\Player\Parts\PlayerBody.cpp" />
+    <ClCompile Include="Game\Objects\Player\Parts\PlayerHead.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game\Camera\Camera2D.h" />
-    <ClInclude Include="Game\Object\Field.h" />
+    <ClInclude Include="Game\Objects\Environment\Field.h" />
     <ClInclude Include="Game\Editor\Manager\EditorManager.h" />
     <ClInclude Include="Game\Editor\Base\BaseEditor.h" />
     <ClInclude Include="Lib\Adapter\Easing.h" />
@@ -501,13 +503,15 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClInclude Include="Game\Light\Manager\LightManager.h" />
     <ClInclude Include="Engine\CBuffer\LightBuffer.h" />
     <ClInclude Include="Game\3D\Model\Model.h" />
-    <ClInclude Include="Game\Object\Test.h" />
     <ClInclude Include="Engine\CBuffer\ParticleBuffer.h" />
     <ClInclude Include="Engine\Renderer\ParticleRenderer.h" />
     <ClInclude Include="Game\Scenes\TitleScene.h" />
     <ClInclude Include="Engine\Renderer\ShadowMapRenderer.h" />
     <ClInclude Include="Game\Camera\SunLightCamera.h" />
     <ClInclude Include="Game\2D\Sprite.h" />
+    <ClInclude Include="Game\Objects\Player\Player.h" />
+    <ClInclude Include="Game\Objects\Player\Parts\PlayerBody.h" />
+    <ClInclude Include="Game\Objects\Player\Parts\PlayerHead.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
