--- a/Project/Engine.vcxproj
+++ b/Project/Engine.vcxproj
@@ -423,6 +423,8 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClCompile Include="Game\Objects\Player\Player.cpp" />
     <ClCompile Include="Game\Objects\Player\Parts\PlayerBody.cpp" />
     <ClCompile Include="Game\Objects\Player\Parts\PlayerHead.cpp" />
+    <ClCompile Include="Game\Objects\Player\Parts\PlayerLeftArm.cpp" />
+    <ClCompile Include="Game\Objects\Player\Parts\PlayerRightArm.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game\Camera\Camera2D.h" />
@@ -512,6 +514,8 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClInclude Include="Game\Objects\Player\Player.h" />
     <ClInclude Include="Game\Objects\Player\Parts\PlayerBody.h" />
     <ClInclude Include="Game\Objects\Player\Parts\PlayerHead.h" />
+    <ClInclude Include="Game\Objects\Player\Parts\PlayerLeftArm.h" />
+    <ClInclude Include="Game\Objects\Player\Parts\PlayerRightArm.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
