--- a/Project/Engine.vcxproj.filters
+++ b/Project/Engine.vcxproj.filters
@@ -123,8 +123,10 @@
     <ClCompile Include="Game\Objects\Player\Parts\PlayerBody.cpp" />
     <ClCompile Include="Game\Objects\Player\Parts\PlayerHead.cpp" />
     <ClCompile Include="PG3\Cube.cpp" />
-    <ClCompile Include="PG3\Command.cpp" />
-    <ClCompile Include="PG3\InputHandler.cpp" />
+    <ClCompile Include="Game\Scenes\StageScene.cpp" />
+    <ClCompile Include="PG3\Bullet.cpp" />
+    <ClCompile Include="PG3\Enemy.cpp" />
+    <ClCompile Include="Game\Scenes\ClearScene.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\Utility\Environment.h" />
@@ -215,7 +217,9 @@
     <ClInclude Include="Game\Objects\Player\Parts\PlayerBody.h" />
     <ClInclude Include="Game\Objects\Player\Parts\PlayerHead.h" />
     <ClInclude Include="PG3\Cube.h" />
-    <ClInclude Include="PG3\Command.h" />
-    <ClInclude Include="PG3\InputHandler.h" />
+    <ClInclude Include="Game\Scenes\StageScene.h" />
+    <ClInclude Include="PG3\Bullet.h" />
+    <ClInclude Include="PG3\Enemy.h" />
+    <ClInclude Include="Game\Scenes\ClearScene.h" />
   </ItemGroup>
 </Project>
