--- a/Project/Engine.vcxproj.filters
+++ b/Project/Engine.vcxproj.filters
@@ -127,6 +127,8 @@
     <ClCompile Include="PG3\Bullet.cpp" />
     <ClCompile Include="PG3\Enemy.cpp" />
     <ClCompile Include="Game\Scenes\ClearScene.cpp" />
+    <ClCompile Include="PG3\Command.cpp" />
+    <ClCompile Include="PG3\InputHandler.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\Utility\Environment.h" />
@@ -221,5 +223,7 @@
     <ClInclude Include="PG3\Bullet.h" />
     <ClInclude Include="PG3\Enemy.h" />
     <ClInclude Include="Game\Scenes\ClearScene.h" />
+    <ClInclude Include="PG3\Command.h" />
+    <ClInclude Include="PG3\InputHandler.h" />
   </ItemGroup>
 </Project>
